--- a/starter/app/src/main/res/layout/fragment_detail.xml
+++ b/starter/app/src/main/res/layout/fragment_detail.xml
@@ -48,6 +48,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:text="@string/close_approach_data_title"
+                        android:textSize="22sp"
+                        android:textStyle="bold"
                         android:textColor="@color/default_text_color" />
 
                     <TextView
@@ -55,6 +57,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="4dp"
+                        android:textSize="20sp"
                         android:text="@{asteroid.closeApproachDate}"
                         android:textColor="@color/default_text_color"
                         tools:text="2020-02-01" />
@@ -76,6 +79,9 @@
                         <TextView
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:textSize="22sp"
+                            android:textStyle="bold"
+
                             android:text="@string/absolute_magnitude_title"
                             android:textColor="@color/default_text_color" />
 
@@ -84,6 +90,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="4dp"
+                            android:textSize="20sp"
                             android:textColor="@color/default_text_color"
                             app:astronomicalUnitText="@{asteroid.absoluteMagnitude}"
                             tools:text="25.126 au" />
@@ -102,6 +109,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:textSize="22sp"
+                    android:textStyle="bold"
                     android:text="@string/estimated_diameter_title"
                     android:textColor="@color/default_text_color" />
 
@@ -110,6 +119,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
+                    android:textSize="20sp"
                     android:textColor="@color/default_text_color"
                     app:kmUnitText="@{asteroid.estimatedDiameter}"
                     tools:text="0.82 km" />
@@ -118,6 +128,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:textSize="22sp"
+                    android:textStyle="bold"
                     android:text="@string/relative_velocity_title"
                     android:textColor="@color/default_text_color" />
 
@@ -126,6 +138,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
+                    android:textSize="20sp"
                     android:textColor="@color/default_text_color"
                     app:velocityText="@{asteroid.relativeVelocity}"
                     tools:text="11.9 km/s" />
@@ -134,6 +147,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:textSize="22sp"
+                    android:textStyle="bold"
                     android:text="@string/distance_from_earth_title"
                     android:textColor="@color/default_text_color" />
 
@@ -142,6 +157,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="4dp"
+                    android:textSize="20sp"
                     android:textColor="@color/default_text_color"
                     app:astronomicalUnitText="@{asteroid.distanceFromEarth}"
                     tools:text="0.0924 au" />
